[tool.poetry]
name = "trending-tokens"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
aiohttp = "3.9.3"
aiosignal = "1.3.1"
attrs = "23.2.0"
coverage = "7.4.3"
exceptiongroup = "1.2.0"
frozenlist = "1.4.1"
idna = "3.6"
iniconfig = "2.0.0"
multidict = "6.0.5"
packaging = "23.2"
pluggy = "1.4.0"
tomli = "2.0.1"
yarl = "1.9.4"


[tool.poetry.group.dev.dependencies]
mock = "^4.0.3"
requests-mock = "^1.9.3"
pytest-asyncio = "^0.23.8"
pytest = "^7.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
